# router/_responses.py
@@ -11,6 +11,10 @@ BAD_REQUEST_RESPONSE = {
     400: {"description": "Bad Request", "model": CommonResponse},
 }
 
+INTERNAL_ERROR_RESPONSE = {
+    500: {"description": "Internal Server Error", "model": CommonResponse},
+}
+
 
 def not_found_response(resource: str) -> dict:
     return {404: {"description": f"{resource} not found", "model": CommonResponse}}
